dark mode fixed

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -54,7 +54,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --color-background: var(--vt-c-black);
+    --color-background: var(--vt-c-white);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
